@@ -1,0 +1,15 @@
+Another Slight Atari Player - DirectShow source filter
+------------------------------------------------------
+
+This DirectShow filter enables support for Atari 8-bit computer music
+in all players which support DirectShow filters, including Windows Media
+Player.
+
+To install the plugin:
+1. Extract asap_dsf.dll, install_dsf.bat and uninstall_dsf.bat to a directory
+   of your choice.
+2. Run install_dsf.bat.
+
+To uninstall the plugin:
+1. Run uninstall_dsf.bat.
+2. Delete the files.
